[project]
name = "bulk-gapless-mp3-pipeline"
version = "1.3.0"
description = "Lossless → perfect gapless MP3s + MusicBrainz tagging & cover art"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "mutagen",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
